# movie-ticketing

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
.github/ISSUE_TEMPLATE/: 이슈-생성-템플릿.md
src/: main.py
src/apis/auth/: auth.py
src/apis/movies/: movies.py
src/apis/payments/: payments.py
src/apis/reservations/: reservations.py
