[tool.poetry]
name = "movie-ticketing"
version = "0.1.0"
description = ""
authors = ["Kim Dael <daelkdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
